meal-ui/src/styles/local/partials/1-elements/forms/inputs.scss
@use '@carbon/react/scss/spacing' as *;
@use '../../../mixins/card-shadow' as *;
@use '../../../mixins/text-mixins' as *;
@use './overrides';

.form-input * {
	width: 100%;
	border: none;
	@include form-input();
}

.form-input {
	::placeholder {
		opacity: 1;
	}

	:focus::placeholder {
		opacity: 0;
		transition: opacity 0.4s ease-out;
	}

	input[type='text'],
	input[type='number'],
	select .select-items,
	option,
	textarea {
		background-color: var(--background-details);
		border: 1px solid transparent;
		border-radius: 12px;
	}

	input:focus-visible,
	textarea:focus-visible {
		outline: none;
		border: 1px solid var(--primary-action);
		transition: border 0.4s ease-out;
		border-radius: 12px;
		@include card-shadow-3();
	}

	input[type='text'].text-input,
	textarea.long-text-input {
		@include text();
	}

	textarea {
		resize: vertical;
	}

	input[type='checkbox'] {
		margin: $spacing-04;
		width: unset;
	}

	input::-webkit-outer-spin-button,
	input::-webkit-inner-spin-button {
		-webkit-appearance: none;
		margin: 0;
	}

	input:disabled {
		background-color: var(--input-background-disabled);
	}

	label {
		@include form-label();
	}

	label.disabled {
		@include disabled-text();
	}
}

